# profiles-api

./: .gitignore  README.md  pyproject.toml
basic_info/: admin.py  models.py  tests.py  urls.py  views.py
basic_info/migrations/: 0001_initial.py  0002_alter_schoolinfo_basic_info.py  0003_alter_workexperience_basic_info.py
common/: models.py
core/: settings.py  urls.py
